# tesh

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  build-debug  build-debug.ps1  gtags.conf  main.cpp
.github/workflows/: build.yaml
cmake/: SetupSDL2.cmake
res/: logo.kra  logo.png.kra
src/: backlog.cpp  backlog.hpp  config.cpp  config.hpp  error.cpp  error.hpp  global.cpp  global.hpp  main.cpp  prompt.cpp  prompt.hpp  rcstr.cpp  rcstr.hpp  render.cpp  render.hpp  search.hpp  shell.cpp  shell.hpp  shell_builtin.cpp  shell_execute.cpp  shell_execute.hpp  shell_io.cpp  shell_local.cpp  shell_parse.cpp  shell_parse.hpp  shell_path.cpp  shell_tick.cpp  shell_tty.cpp  solarized_dark.cpp  solarized_dark.hpp  tesh.cpp  tesh.hpp  unicode.cpp  unicode.hpp
test-programs/: catforever.c  mycat.c  myecho.c
tests/: forever.c  mycat.c  test_backlog.cpp  test_shell_execute.cpp  test_shell_parse.cpp  tests.cpp
